--- a/css/gallery.css
+++ b/css/gallery.css
@@ -7,10 +7,13 @@
 }
 
 h1{
+  display:flex;
   height:100vh;
   color:black;
+  background-color:white;
   font-size:4rem;
   align-items:center;
+  justify-content:center;
 }
 
 
