--- a/css/header.css
+++ b/css/header.css
@@ -72,9 +72,24 @@ html {
   align-items: center;
   background-color: rgb(250, 250, 250);
   width: 100%;
-
   text-align: center;
+  transform-origin: top center;
+  border-radius: 5px;
+  animation: showmenu 0.5s ease-in-out forwards;
 }
+
+@keyframes showmenu {
+  0% {
+    transform: scaleY(0);
+  }
+
+  80% {
+    transform: scaleY(1.2);
+  }
+
+  100% {
+    transform: scaleY(1);
+  }
 
 .Header-button {
   font-size: 18px;
