--- a/css/header.css
+++ b/css/header.css
@@ -73,6 +73,7 @@ html {
   background-color: rgb(250, 250, 250);
   width: 100%;
   text-align: center;
+  transform-origin: top center;
   animation: showmenu 0.5s ease-in-out forwards;
 }
 
