--- a/css/header.css
+++ b/css/header.css
@@ -74,9 +74,9 @@ html {
   width: 100%;
   text-align: center;
   transform-origin: top center;
+
   animation: showmenu 0.5s ease-in-out forwards;
 }
-
 @keyframes showmenu {
   0% {
     transform: scaleY(0);
@@ -89,6 +89,7 @@ html {
   100% {
     transform: scaleY(1);
   }
+}
 
 .Header-button {
   font-size: 18px;
