--- a/css/header.css
+++ b/css/header.css
@@ -194,6 +194,7 @@ html {
   border-style: solid;
   border-color: rgb(254, 221, 4);
   background-image: url(../images/White_mesh.jpg);
+  background-color:rgb(215,215,215);
 }
 
 .heading1 {
