--- a/css/resume.css
+++ b/css/resume.css
@@ -1,8 +1,7 @@
 .pic{
-  height:150px;
-  border-radius:75px ;
+  
   object-fit: cover;
-  margin-top: 100px;
+  
  
 }
 p{margin:0px;
@@ -17,7 +16,7 @@ padding:0px;}
   background-color: rgba(0, 0, 0, 0.637);
   align-items: center;
   padding-bottom: 20PX;
- 
+  padding-top: 100px;
 }
 
 .resume-main{
@@ -32,7 +31,43 @@ padding:0px;}
 display: flex;
 flex-direction: column;
 align-items: center;
-justify-content: center;
+height:150px;
+width: 150px;
+border-radius:75px ;
+justify-content: center;position: relative;
+background: rgb(254, 221, 4);
+overflow: hidden;
+}
+
+#resume-pic::before{
+  content: '';
+  background:linear-gradient(38deg, rgb(254, 221, 4) ,rgb(254, 221, 4) ,#fffefe,rgb(53, 52, 52),rgb(53, 52, 52));
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  z-index: 0;
+  animation:flow 4s linear infinite;
+}
+
+
+
+
+.pic{
+   background-color: #060c21;
+   height: calc( 100% - 6px);
+   width: calc(100% - 6px);
+   border-radius:72px ;
+   z-index: 1;
+}
+@keyframes flow {
+   0%{
+       transform: rotate(0deg);
+   }
+   100%{
+       transform: rotate(360deg);
+   }
 }
 
 .resume-pic-name{
