--- a/css/gallery.css
+++ b/css/gallery.css
@@ -10,8 +10,10 @@
   display:flex;
   flex-direction:column;
   height:100vh;
-  color:black;
-  background-color:white;
+  color:rgb(255, 255, 255);
+  background-color:rgb(0, 0, 0);
+  background-image: url(../images/grey-geometrical-shapes-background.jpg);
+  background-size: cover;
   font-size:4rem;
   text-align:center;
   justify-content:center;
